package uqam.inf5153.game.objectif;

public abstract class Objectif {

    protected int identifiant;

    public Objectif(){}
    public Objectif(int  identifiant){
        this.identifiant= identifiant;
    }
}
