package uqam.inf5153.game.objectif;

public class ObjectifEmpereur extends Objectif {

    public ObjectifEmpereur(){

    }
}
