package uqam.inf5153.game.objectif;

public class ObjectifJardinier extends Objectif {

    //TODO Produit final
    public ObjectifJardinier(int identifiant){
        super(identifiant);
    }
}
