package uqam.inf5153.game.objectif;

public class ObjectifPanda extends Objectif {

    //TODO Produit final
    public ObjectifPanda(int identifiant){
        super(identifiant);
    }
}
