package uqam.inf5153.game.parcelle;


public class BambouJaune extends Bambou {

    @Override
    public Couleur getCouleur() {
        return Couleur.JAUNE;
    }
}
