package uqam.inf5153.game.parcelle;

public enum Couleur {

    JAUNE,
    ROSE,
    VERT
}
