package uqam.inf5153.game.parcelle;

import uqam.inf5153.game.plateau.Coordonnees;

public class ParcelleJaune extends Parcelle {

        public ParcelleJaune() {

        }

        @Override
        public Couleur getCouleur() {
            return Couleur.JAUNE;
        }

        @Override
        public int getParcelleId() {
                return parcelleId;
        }

}
