package uqam.inf5153.game.parcelle;

import uqam.inf5153.game.plateau.Coordonnees;

public class ParcelleRose extends Parcelle {
    public ParcelleRose() {
    }


    @Override
    public Couleur getCouleur() {
        return Couleur.ROSE;
    }

    @Override
    public int getParcelleId() {
        return parcelleId;
    }

}
