package uqam.inf5153.game.parcelle;


public class ParcelleVerte extends Parcelle {
    public ParcelleVerte() {

    }

    @Override
    public Couleur getCouleur() {
        return Couleur.VERT;
    }

    @Override
    public int getParcelleId() {
        return parcelleId;
    }


}
