@startuml
!include _common.style

title Takenoko (Structure)
center footer project #2 - class diagram

package uqam.inf5153.game{

  package parcelle{
    abstract class Parcelle{
    }
    class ParcelleVerte{
    }
    class ParcelleJaune{
    }
    class ParcelleRose{
    }
    class ParcelleEtang{
    }
    class Couleur {
     }
    abstract class Bambou {
    }
    class BambouVert{
    }
    class BambouRose {
    }
    class BambouJaune {
    }

    ParcelleVerte --|> Parcelle
    ParcelleJaune --|> Parcelle
    ParcelleRose --|> Parcelle
    ParcelleEtang --|> Parcelle
    Parcelle *--> "1-4"Bambou
    Parcelle *--> Coordonnees
    BambouJaune --|> Bambou
    BambouVert --|> Bambou
    BambouRose --|> Bambou
    Bambou -- Couleur

  }

  package objectif{
    abstract class Objectif{
      points : int
    }
    class ObjectifParcelle {
    }
    class ObjectifEmpereur {
    }
    class ObjectifJardinier {
    }
    class ObjectifPanda {
    }

    ObjectifParcelle --|> Objectif
    ObjectifEmpereur --|> Objectif
    ObjectifJardinier --|> Objectif
    ObjectifPanda --|> Objectif
  }

  package joueur{
      class Joueur{
        - score: int
        - nbrActions: int
      }
      class PlateauDuJoueur{

      }
      Joueur *--> PlateauDuJoueur
      Joueur *--> Objectif
    }
  package figurine {

      abstract class Figurine {
      }
      class Jardinier {
      }
      class Panda {
      }
      Jardinier --|> Figurine
      Panda --|> Figurine

    }
  package plateau{
    class Coordonnees {
    }
    class Irrigation{
    }
    class PlateauDeJeu {
    }
    class ReseauIrrigation {
    + this(irrDebut: Irrigation)
    ----
    + ajouterIrrigationAuReseau(irr: Irrigation): boolean
    }

    PlateauDeJeu *--> "n" Parcelle

    PlateauDeJeu *--> "n" ReseauIrrigation
    ReseauIrrigation *--> "n" Irrigation

  }




  package pioche {

    abstract class Pioche {
    }
    class PiocheObjectifs {
    }
    class PiocheParcelles {
    }

    PiocheObjectifs --|> Pioche
    PiocheParcelles --|> Pioche

  }

  class Jeu {
  }
  class Takenoko {

  }
  class Main {
  }


  Jeu -- PlateauDeJeu
  Jeu -- Takenoko
  Jeu -- Joueur
  Takenoko -- Main





}

@enduml